Fixed a couple of tests